RavenDB-11784 [Setup Wizard] UI issue on Firefox

--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -163,9 +163,7 @@ h6 {
         .caret {
             margin-left: 2px;
             margin-right: -2px;
-            float: right;
             position: relative;
-            top: 10px;
             margin-left: 7px;
             margin-right: -2px;
         }
